--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "require": {
         "php": "^7.1",
         "php-di/php-di": "^6.0",
-        "rappasoft/laravel-helpers": "^1.0"
+        "rappasoft/laravel-helpers": "^1.0",
+        "symfony/routing": "^3.4",
+        "nikic/fast-route": "^1.3",
+        "altorouter/altorouter": "^1.2"
     }
 }
