--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "juris/the-app",
+    "name": "rkistaps/the-app",
     "authors": [
         {
             "name": "kristaps taube",
@@ -15,8 +15,6 @@
         "php": "^7.1",
         "php-di/php-di": "^6.0",
         "rappasoft/laravel-helpers": "^1.0",
-        "symfony/routing": "^3.4",
-        "nikic/fast-route": "^1.3",
         "altorouter/altorouter": "^1.2"
     }
 }
