--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "php": "^7.1",
     "php-di/php-di": "^6.0",
     "rappasoft/laravel-helpers": "^1.0",
-    "altorouter/altorouter": "^1.2"
+    "altorouter/altorouter": "^1.2",
+    "tightenco/collect": "^5.5"
   }
 }
