--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "rappasoft/laravel-helpers": "^1.0",
     "altorouter/altorouter": "^1.2",
     "tightenco/collect": "^5.5",
-    "ext-json": "*"
+    "ext-json": "*",
+    "league/plates": "^3.3"
   }
 }
