--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "altorouter/altorouter": "^1.2",
     "tightenco/collect": "^5.5",
     "ext-json": "*",
-    "filp/whoops": "^2.5"
+    "filp/whoops": "^2.5",
+    "phly/http": "^0.14.1"
   }
 }
