--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "tightenco/collect": "^5.5",
     "ext-json": "*",
     "filp/whoops": "^2.5",
+    "psr/http-message": "^1.0",
     "phly/http": "^0.14.1"
   }
 }
