--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
     "php": "^7.1",
     "php-di/php-di": "^6.0",
     "rappasoft/laravel-helpers": "^1.0",
-    "altorouter/altorouter": "^1.2",
     "tightenco/collect": "^5.5",
     "ext-json": "*",
     "filp/whoops": "^2.5",
     "psr/http-message": "^1.0",
-    "phly/http": "^0.14.1"
+    "phly/http": "^0.14.1",
+    "psr/http-server-middleware": "^1.0"
   }
 }
