--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,28 @@
 {
-  "name": "rkistaps/the-app",
-  "authors": [
-    {
-      "name": "kristaps taube",
-      "email": "kristaps.taube@gmail.com"
+    "name": "rkistaps/the-app",
+    "authors": [
+      {
+        "name": "kristaps taube",
+        "email": "kristaps.taube@gmail.com"
+      }
+    ],
+    "autoload": {
+      "psr-4": {
+        "TheApp\\": "src/"
+      }
+    },
+    "require": {
+      "php": "^7.4",
+      "php-di/php-di": "^6.0",
+      "rappasoft/laravel-helpers": "^1.0",
+      "altorouter/altorouter": "^1.2",
+      "tightenco/collect": "^5.5",
+      "ext-json": "*",
+      "filp/whoops": "^2.5",
+      "psr/http-message": "^1.0",
+      "psr/http-server-handler": "^1.0",
+      "psr/http-server-middleware": "^1.0",
+      "jasny/http-message": "^1.3"
     }
-  ],
-  "autoload": {
-    "psr-4": {
-      "TheApp\\": "src/"
-    }
-  },
-  "require": {
-    "php": "^7.1",
-    "php-di/php-di": "^6.0",
-    "rappasoft/laravel-helpers": "^1.0",
-    "altorouter/altorouter": "^1.2",
-    "tightenco/collect": "^5.5",
-    "ext-json": "*",
-    "filp/whoops": "^2.5",
-    "psr/http-message": "^1.0",
-    "phly/http": "^0.14.1",
-    "psr/http-server-handler": "^1.0"
   }
-}
+  
