--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
       "psr/http-server-handler": "^1.0",
       "psr/http-server-middleware": "^1.0",
       "jasny/http-message": "^1.3",
-      "samejack/php-argv": "dev-master"
+        "samejack/php-argv": "^1.0"
     }
   }
