--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
   ],
   "autoload": {
     "psr-4": {
-      "TheApp\\": "src/"
+      "TheApp\\": "src/",
+      "TheApp\\Tests\\": "tests/"
     }
   },
   "require": {
-    "php": "^7.4",
+    "php": "^8.3",
     "php-di/php-di": "^6.0",
     "rappasoft/laravel-helpers": "^1.0",
     "filp/whoops": "^2.5",
@@ -21,5 +22,9 @@
     "psr/http-server-middleware": "^1.0",
     "jasny/http-message": "^1.3",
     "samejack/php-argv": "^1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^11.5",
+    "mockery/mockery": "^1.6"
   }
 }
